# fwupd

./: .codecov.yml  meson.build
contrib/: bom.json.in  meson.build
libfwupdplugin/: fu-udev-device.c
plugins/ata/: fu-ata-device.c
plugins/dell-kestrel/: fu-dell-kestrel-common.h  fu-dell-kestrel-ec-hid.c  fu-dell-kestrel-ec-hid.h  fu-dell-kestrel-ec-hid.rs  fu-dell-kestrel-ec.c  fu-dell-kestrel-ec.h  fu-dell-kestrel-ec.rs  fu-dell-kestrel-package.c  fu-dell-kestrel-pd.c  fu-dell-kestrel-pd.h  fu-dell-kestrel-plugin.c  fu-dell-kestrel-rmm.c  fu-dell-kestrel-rtshub-firmware.c  fu-dell-kestrel-rtshub.c  fu-dell-kestrel-rtshub.h  fu-dell-kestrel.rs  meson.build
plugins/scsi/: fu-scsi-device.c
plugins/telink-dfu/: fu-telink-dfu-hid-device.c  telink-dfu.quirk
